--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,46 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+	--main-bg: #24292e;
+	--bg-text: rgba(56, 58, 61, 0.35);
+	--text-color: #efefef;
+	--accent-color: #f9826c;
+	--titlebar-bg: #1f2428;
+	--sidebar-bg: #24292e;
+	--sidebar-hover-bg: #1f2428;
+	--explorer-bg: #1f2428;
+	--explorer-hover-bg: #24292e;
+	--explorer-border: #161a1d;
+	--tabs-bg: #1f2428;
+	--tab-bg: #1f2428;
+	--tab-active-bg: #24292e;
+	--tab-border: #24292e;
+	--bottombar-bg: #24292e;
+	--bottombar-border: #1b1f23;
+	--button-bg: #176f2c;
+	--button-text: #dcffe4;
+	--bottombar-hover-bg: #4f4f52;
+	--scrollbar-track-bg: #24292e;
+	--scrollbar-thumb-bg: #333536;
+	--article-bg: #1f2428;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+	:root {
+		--foreground-rgb: 255, 255, 255;
+		--background-start-rgb: 0, 0, 0;
+		--background-end-rgb: 0, 0, 0;
+	}
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	color: rgb(var(--foreground-rgb));
+
+	background: #24292e;
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+	.text-balance {
+		text-wrap: balance;
+	}
 }
